src/test/ui/feature-gate/issue-43106-gating-of-stable.stderr
error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:7:1
   |
LL | #![stable()]
   | ^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:10:1
   |
LL | #[stable()]
   | ^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:13:17
   |
LL |     mod inner { #![stable()] }
   |                 ^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:16:5
   |
LL |     #[stable()] fn f() { }
   |     ^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:19:5
   |
LL |     #[stable()] struct S;
   |     ^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:19:5
   |
LL |     #[stable()] struct S;
   |     ^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:23:5
   |
LL |     #[stable()] type T = S;
   |     ^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-stable.rs:26:5
   |
LL |     #[stable()] impl S { }
   |     ^^^^^^^^^^^

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0734`.
